implemented post tution, dark to light mode switching , apply for tution , accept tution , notification features , profile edit options , exploring tutions, password constraints